fixed image overflowing

--- a/src/stylesheets/pages/work/_work.scss
+++ b/src/stylesheets/pages/work/_work.scss
@@ -8,13 +8,20 @@
     flex-direction: column;
     margin-bottom: 2.5rem;
     text-decoration: none;
+    overflow: hidden;
 
     &__h3 {
       @extend .text-white;
       padding: 1.75rem;
     }
+    &__imageHolder {
+      max-height: 70%;
+      display: flex;
+      align-items: flex-end;
+      justify-content: flex-end;
+    }
     &__image {
-      width: 100%;
+      height: 100%;
     }
   }
 }
